# scout

./: .gitignore  Examples.md  README.md  main.py  pyproject.toml  snapshot.md  test.md  test.py
.github/workflows/: e2e.yml
docker/: docker-compose.yml  dockerfile
recipes/: README.md  crawl_asyncio_docs.py  spotify_playlist_copy.py  spotify_playlist_scrape.py
scout/: core.py  document.py  html_parser.py  logger.py  scout.py
scout/adapters/: Playwright.py  __init__.py  browser_manager.py
scout/agents/: __init__.py  browser_agent.py  extraction_agent.py
scout/scripts/: __init__.py  captcha_handler.js  remove_popup.js
tests/: test_core_document.py  test_html_parser.py
tests/e2e/: conftest.py  helpers.py  test_adapters_e2e.py  test_scout_actions.py  test_scout_e2e.py
tests/e2e/fixtures/: complex.html  index.html  nav_chain.html  nav_target.html  next.html  reload_probe.html  scroll_timeline.html
