[project]
name = "scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "html-to-markdown>=3.1.0",
    "playwright>=1.58.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests",
]
