[project]
name = "scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cssselect>=1.4.0",
    "html-to-markdown>=3.1.0",
    "lxml>=6.0.3",
    "playwright>=1.58.0",
    "pydantic-ai-slim[google,groq]>=1.77.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests",
]

[tool.setuptools.packages.find]
include = ["scout*"]